# localify-android-cpp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.gradle  settings.gradle  setup-github.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: android_ui.h  api_service.h  app_config.h  http_client.h  jni_bridge.h  json_parser.h  manifest.h  models.h  native_activity_handler.h  screens.h
app/src/main/cpp/src/: android_ui.cpp  api_service.cpp  http_client.cpp  jni_bridge.cpp  json_parser.cpp  main.cpp  map_screen.cpp  native_activity_handler.cpp  screens.cpp
app/src/main/java/com/localify/android/: LocalifyNative.java
app/src/main/java/com/localify/android/models/: Artist.java  User.java
app/src/main/res/values/: strings.xml  themes.xml
